--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,14 @@
 version: "3"
 services:
-  simple-sms-redis:
-    image: redis
-    container_name: simple-sms-redis
-    restart: always
-    volumes:
-      - ./.data:/data
-  simple-sms-notify-service-dev:
-    container_name: simple-sms-notify-service-dev
-    image: odjhey/simple-sms-notify-service:latest
+  node-express-hello-world:
+    container_name: node-express-hello-world
+    image: odjhey/node-express-hello-world:latest
     restart: always
     build:
-      context: ./server
+      context: .
       dockerfile: Dockerfile
-    command: "node index.js"
+    command: "node server.js"
     ports:
-      - "9090:8080"
+      - "3090:8080"
     environment:
       PORT: "8080"
-      REDIS_HOST: "simple-sms-redis"
-      REDIS_PORT: "6379"
