--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3"
+
 services:
   node-express-hello-world:
     container_name: node-express-hello-world
@@ -8,7 +9,16 @@ services:
       context: .
       dockerfile: Dockerfile
     command: "node server.js"
-    ports:
-      - "3090:8080"
     environment:
       PORT: "8080"
+    labels:
+      - traefik.http.routers.test3.rule=Host(`test.apps.domain.com`) && PathPrefix(`/bato`)
+      - traefik.http.routers.test3.tls=true
+      - traefik.http.routers.test3.tls.certresolver=lets-encrypt
+      - traefik.port=8080
+    networks:
+      - web
+
+networks:
+  web:
+    external: true
